apps/base/lidarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lidarr
  template:
    metadata:
      labels:
        app: lidarr
        app.kubernetes.io/name: lidarr
        app.kubernetes.io/instance: lidarr
    spec:
      containers:
        - name: lidarr
          image: lscr.io/linuxserver/lidarr:8.1.2135
          resources:
            requests:
              cpu: 10m
              memory: 170Mi
            limits:
              memory: 400Mi
          volumeMounts:
            - name: lidarr-config
              mountPath: /config
              subPath: lidarr/config
            - name: lidarr-data
              mountPath: /music
              subPath: media/music
            - name: lidarr-data
              mountPath: /downloads
              subPath: media/downloads
      volumes:
        - name: lidarr-config
          persistentVolumeClaim:
            claimName: lidarr-config-pvc
        - name: lidarr-data
          persistentVolumeClaim:
            claimName: jellyfin-data-pvc
      securityContext:
        runAsUser: 995
        runAsGroup: 501
        fsGroup: 501
        fsGroupChangePolicy: "OnRootMismatch"
