apps/base/lidarr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lidarr
spec:
  ingressClassName: traefik
  rules:
    - host: lidarr.localho.st
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lidarr
                port:
                  name: http
