apps/base/lidarr/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: lidarr-route
  namespace: lidarr
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - lidarr.localho.st
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: lidarr
          port: 8686
